# ibeji

./: .accepted_words.txt  .dockerignore  .editorconfig  .gitignore  .gitmodules  .markdownlinkcheck.json  .swp  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.amd64  Dockerfile.arm64  Dockerfile.ibeji.consumer  Dockerfile.ibeji.dt  Dockerfile.ibeji.provider  Dockerfile.integrated  Dockerfile_integrated.amd64  Dockerfile_integrated.arm64  Dockerfile_integrated.multi  NOTICE  README.md  SECURITY.md  rust-toolchain.toml  rustfmt.toml  tmp.out
.cargo/: config.toml
core/common/: .accepted_words.txt  Cargo.toml  README.md
core/common/src/: grpc_extension.rs  grpc_interceptor.rs  grpc_interceptor_samples.rs  grpc_module.rs  grpc_server.rs  grpc_service.rs  intercepting_filter.rs  intercepting_filter_samples.rs  layer_plugin.rs  lib.rs  middleware.rs  sample_grpc_interceptor.rs  utils.rs
core/extension/: Cargo.toml
core/extension/src/: extension.rs  extension_builder.rs  extension_config.rs  lib.rs
core/extension/src/managed_subscribe/: managed_subscribe_ext.rs  managed_subscribe_interceptor.rs  managed_subscribe_store.rs
core/invehicle-digital-twin/: Cargo.toml
core/invehicle-digital-twin/src/: digitaltwin_impl.rs  invehicle_digital_twin_config.rs  invehicle_digital_twin_impl.rs  main.rs  providerservice_impl.rs
core/invehicle-digital-twin/template/: invehicle_digital_twin_settings.yaml
core/module/digital_twin_graph/: Cargo.toml
core/module/digital_twin_graph/src/: digital_twin_graph_config.rs  digital_twin_graph_impl.rs  digital_twin_graph_module.rs  lib.rs  respond_impl.rs
core/module/digital_twin_registry/: Cargo.toml
core/module/digital_twin_registry/src/: digital_twin_registry_impl.rs  digital_twin_registry_module.rs  lib.rs
core/module/managed_subscribe/: Cargo.toml
core/module/managed_subscribe/src/: lib.rs  managed_subscribe_ext.rs  managed_subscribe_interceptor.rs  managed_subscribe_module.rs  managed_subscribe_store.rs
core/module/managed_subscribe/template/: managed_subscribe_settings.yaml
core/protobuf_data_access/: Cargo.toml  build.rs
core/protobuf_data_access/src/: lib.rs
digital-twin-model/: .accepted_words.txt  Cargo.toml  README.md
digital-twin-model/dtdl/dtmi/sdv/: airbag_seat_massager-1.json  basic_airbag_seat_massager-1.json  cabin-1.json  camera-1.json  hmi-1.json  hvac-1.json  infotainment-1.json  obd-1.json  premium_airbag_seat_massager-1.json  seat-1.json  seat_massager-1.json  seat_with_massager-1.json  vehicle-1.json
digital-twin-model/dtdl/v3/content/: airbag_seat_massager.json  hmi.json  hvac.json
digital-twin-model/src/: lib.rs  sdv_v0.rs  sdv_v1.rs  sdv_v2.rs
dtdl-parser/: .accepted_words.txt  Cargo.toml  README.md
dtdl-parser/dtdl/samples/: building.json  demo_resources.json  phone.json
dtdl-parser/src/: command_info.rs  command_info_impl.rs  command_payload_info.rs  command_payload_info_impl.rs  complex_schema_info.rs  component_info.rs  component_info_impl.rs  content_info.rs  dtmi.rs  entity_info.rs  entity_kind.rs  field_info.rs  field_info_impl.rs  interface_info.rs  interface_info_impl.rs  lib.rs  model_dict.rs  model_parser.rs  named_entity_info.rs  object_info.rs  object_info_impl.rs  primitive_schema_info.rs  primitive_schema_info_impl.rs  primitive_schema_kinds.rs  property_info.rs  property_info_impl.rs  relationship_info.rs  relationship_info_impl.rs  schema_field_info.rs  schema_info.rs  telemetry_info.rs  telemetry_info_impl.rs
in-vehicle-digital-twin/: Cargo.toml
in-vehicle-digital-twin/src/: digitaltwin_impl.rs  main.rs  provider_impl.rs
proto/: Cargo.toml  build.rs  consumer.proto  digitaltwin.proto  provider.proto
proto/digital_twin/v1/: digital_twin.proto
proto/src/: lib.rs
samples/command/: Cargo.toml
samples/command/consumer/: Cargo.toml
samples/command/consumer/src/: consumer_impl.rs  main.rs
samples/command/dtdl/content/: send_notification.json  show_notification.json
samples/command/provider/: Cargo.toml
samples/command/provider/src/: main.rs  provider_impl.rs
samples/common/: Cargo.toml
samples/common/.cargo/: config.toml
samples/common/src/: constants.rs  consumer_config.rs  image_rendering.rs  lib.rs  misc.rs  provider_config.rs  utils.rs  view_image.rs
samples/common/template/: consumer_settings.yaml  digital_twin_graph_settings.yaml  provider_settings.yaml  streaming_consumer_settings.yaml  streaming_provider_settings.yaml
samples/digital_twin_graph/: Cargo.toml
samples/digital_twin_graph/consumer/src/: main.rs
samples/digital_twin_graph/seat_massager_provider/src/: main.rs  request_impl.rs
samples/digital_twin_graph/vehicle_core_provider/src/: main.rs  request_impl.rs
samples/managed_subscribe/: .accepted_words.txt  Cargo.toml  README.md
samples/managed_subscribe/consumer/src/: main.rs
samples/managed_subscribe/provider/src/: main.rs  provider_impl.rs
samples/mixed/: Cargo.toml
samples/mixed/consumer/: Cargo.toml
samples/mixed/consumer/src/: consumer_impl.rs  main.rs
samples/mixed/dtdl/content/: mixed.json
samples/mixed/provider/: Cargo.toml
samples/mixed/provider/src/: main.rs  provider_impl.rs  vehicle.rs
samples/property/consumer/: Cargo.toml
samples/property/consumer/src/: consumer_impl.rs  main.rs
samples/property/provider/: Cargo.toml
samples/property/provider/src/: main.rs  provider_impl.rs
samples/proto/: Cargo.toml  build.rs
samples/proto/src/: lib.rs
samples/protobuf_data_access/: Cargo.toml  build.rs
samples/protobuf_data_access/src/: lib.rs
samples/seat_massager/: Cargo.toml
samples/seat_massager/common/src/: lib.rs
samples/seat_massager/consumer/src/: consumer_impl.rs  main.rs  respond_impl.rs  responder_impl.rs
samples/seat_massager/provider/src/: main.rs  provider_impl.rs  request_impl.rs  requestor_impl.rs
samples/streaming/: Cargo.toml
samples/streaming/consumer/src/: main.rs  streaming_consumer_config.rs
samples/streaming/provider/src/: main.rs  provider_impl.rs  streaming_provider_config.rs
samples/tutorial/: Cargo.toml
samples/tutorial/consumer/src/: main.rs
(+174 files in other folders)
