# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[workspace]

# Use version 2 of the feature resolver.
# This is needed by a dependency of the show-image crate.
resolver = "2"

members = [
  # core
  "core/common",
  "core/protobuf_data_access",
  "core/invehicle-digital-twin",

  # extension
  "core/extension",

  # digital twin model
  "digital-twin-model",

  # DTDL parser
  "dtdl-parser",

  # samples
  "samples/common",
  "samples/protobuf_data_access",
  "samples/command",
  "samples/managed_subscribe",
  "samples/mixed",
  "samples/property",
  "samples/seat_massager",
  "samples/streaming",
]

[workspace.dependencies]
async-std = "^1.5"
bytes = "1.4.0"
config = "0.13.3"
env_logger= "0.10.0"
futures = "0.3.28"
futures-core = "0.3.4"
futures-util = "0.3.28"
generic-json = "^0.7"
http = "0.2.9"
http-body = "0.4.5"
hyper = "0.14.27"
image = "0.24.3"
iref = "^2.0.3"
lazy_static = "1.4.0"
log = "^0.4"
paho-mqtt = "0.12"
parking_lot = "0.12.1"
prost = "0.11"
prost-types = "0.11"
regex = " 1.9.3"
serde = "1.0.160"
serde_derive = "1.0.163"
serde_json = "^1.0"
show-image = "0.13.1"
strum = "0.25"
strum_macros = "0.25.1"
tokio = "1.29.1"
tokio-stream = "0.1.14"
tonic = "0.9.2"
tonic-build = "0.9.2"
tower = "0.4.13"
tower-http = "0.4.3"
url = "2.3.1"
uuid = "1.2.2"
yaml-rust = "0.4"
