# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[workspace]

# Use version 2 of the feature resolver.
# This is needed by a dependency of the show-image crate.
resolver = "2"

members = [
  # core
  "core/common",
  "core/protobuf_data_access",
  "core/invehicle-digital-twin",

  # extension
  "core/module/managed_subscribe",
  "core/module/digital_twin_graph",
  "core/module/digital_twin_registry",

  # DTDL tools
  "dtdl-tools",

  # digital twin model
  "digital-twin-model",

  # samples
  "samples/common",
  "samples/protobuf_data_access",
  "samples/command",
  "samples/graph",
  "samples/managed_subscribe",
  "samples/mixed",
  "samples/property",
  "samples/seat_massager",
  "samples/streaming",
  "samples/tutorial"
]

[workspace.dependencies]
async-std = "^1.5"
bytes = "1.4.0"
config = "0.14.0"
derivative = "2.2.0"
dyn-clone = "1.0.14"
env_logger= "0.11.2"
futures = "0.3.28"
futures-core = "0.3.4"
futures-util = "0.3.28"
generic-json = "^0.7"
http = "0.2.9"
http-body = "0.4.5"
hyper = "0.14.27"
image = "0.24.3"
iref = "^3.1.2"
lazy_static = "1.4.0"
log = "^0.4"
paho-mqtt = "0.12"
parking_lot = "0.12.1"
prost = "0.12"
prost-types = "0.12"
rand = "0.8.5"
regex = " 1.9.3"
sdl2 = "0.35.2"
serde = "1.0.160"
serde_derive = "1.0.163"
serde_json = "^1.0"
strum = "0.26.1"
strum_macros = "0.26.1"
tokio = "1.29.1"
tokio-console-subscriber = { version = "0.2.0", package = "console-subscriber" }
tokio-retry = "0.3"
tokio-stream = "0.1.14"
tonic = "0.11.0"
tonic-build = "0.11.0"
tower = "0.4.13"
tower-http = "0.4.3"
url = "2.3.1"
uuid = "1.2.2"
yaml-rust = "0.4"
