# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "digital-twin-model"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
derivative = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }

[lib]
path = "src/lib.rs"
crate-type = ["lib"]
