# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT license.

[package]
name = "dtdl-parser"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-std = { version = "^1.5", features = ["attributes"] }
ibeji-common = { path = "../common" }
ibeji-common_test = { path = "../common-test" }
generic-json = { version = "^0.7", features = ["serde_json-impl"] }
iref = "^2.0.3"
json-ld  = { git = "https://github.com/blast-hardcheese/json-ld", branch = "resolve-issue-40" }
# json-ld  = { git = "https://github.com/timothee-haudebourg/json-ld", tag = "0.9.1-beta" }
lazy_static = "1.4.0"
log = "^0.4"
regex = " 1.7.0"
serde_json = "1.0.88"
strum = "0.24"
strum_macros = "0.24"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]