# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "dtdl-parser"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-std = { workspace = true, features = ["attributes"] }
ibeji-common = { path = "../common" }
ibeji-common_test = { path = "../common-test" }
futures = { workspace = true }
generic-json = { workspace = true, features = ["serde_json-impl"] }
iref = { workspace = true }
json-ld  = { git = "https://github.com/blast-hardcheese/json-ld", branch = "resolve-issue-40" }
lazy_static = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

[lib]
path = "src/lib.rs"
crate-type = ["lib"]