# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT license.

[package]
name = "in-vehicle-digital-twin"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-std = { workspace = true, features = ["attributes"] }
env_logger= { workspace = true }
ibeji-common = { path = "../common" }
ibeji-common_test = { path = "../common-test" }
dtdl-parser = { path = "../dtdl-parser" }
iref = { workspace = true }
json-ld  = { git = "https://github.com/blast-hardcheese/json-ld", branch = "resolve-issue-40" }
log = { workspace = true }
prost = { workspace = true }
proto = { path = "../proto" }
serde_json = { workspace = true }
tokio = { workspace = true , features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }