# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT license.

[package]
name = "proto"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tonic = "0.8.2"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.8.2"
