# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "common"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-std = { workspace = true, features = ["attributes"] }
bytes = { workspace = true }
config = { workspace = true }
env_logger= { workspace = true }
futures = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
hyper = { workspace = true }
iref = { workspace = true }
json-ld  = { git = "https://github.com/blast-hardcheese/json-ld", branch = "resolve-issue-40" }
log = { workspace = true }
parking_lot = { workspace = true }
prost = { workspace = true }
core-protobuf-data-access = { path = "../protobuf_data_access" }
serde = { workspace = true, features = ["derive"] }
serde_derive = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true , features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
url = { workspace = true }
yaml-rust = { workspace = true, optional = true }

[build-dependencies]
tonic-build = { workspace = true }

[features]
default = ["yaml"]
yaml = ["yaml-rust"]