# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "common"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-std = { workspace = true }
bytes = { workspace = true }
config = { workspace = true }
core-protobuf-data-access = { path = "../protobuf_data_access" }
dyn-clone = { workspace = true }
futures = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
hyper = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_derive = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
regex = {workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
url = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[features]
containerize = []
