# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "invehicle-digital-twin"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-std = { workspace = true, features = ["attributes"] }
config = { workspace = true }
env_logger= { workspace = true }
iref = { workspace = true }
json-ld  = { git = "https://github.com/blast-hardcheese/json-ld", branch = "resolve-issue-40" }
log = { workspace = true }
core-extension = { path = "../extension", features = ["managed_subscribe"] }
parking_lot = { workspace = true }
prost = { workspace = true }
core-protobuf-data-access = { path = "../protobuf_data_access" }
serde = { workspace = true, features = ["derive"] }
serde_derive = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true , features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true }
url = { workspace = true }
yaml-rust = { workspace = true, optional = true }

[build-dependencies]
tonic-build = { workspace = true }

[features]
default = ["yaml"]
yaml = ["yaml-rust"]