# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "samples-common"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
log = { workspace = true }
samples-protobuf-data-access = { path = "../protobuf_data_access" }
tonic = { workspace = true }