# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "samples-common"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
config = { workspace = true }
fixed = { workspace = true }
log = { workspace = true }
samples-protobuf-data-access = { path = "../protobuf_data_access" }
serde = { workspace = true, features = ["derive"] }
serde_derive = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
yaml-rust = { workspace = true, optional = true }

[features]
default = ["yaml"]
yaml = ["yaml-rust"]
