# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "samples-common"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
config = { workspace = true }
image = { workspace = true }
log = { workspace = true }
samples-protobuf-data-access = { path = "../protobuf_data_access" }
sdl2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_derive = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
yaml-rust = { workspace = true }

# If built for aarch64, enable the 'vendored-ssl' feature.
[target.'cfg(target_arch = "aarch64")'.dependencies]
sdl2 = { workspace = true, features = [ "bundled", "static-link" ] }
