# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "samples-digital-twin-graph"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-std = { workspace = true, features = ["attributes"] }
digital_twin_graph = { path = "../../core/module/digital_twin_graph" }
digital_twin_registry = { path = "../../core/module/digital_twin_registry" }
digital-twin-model = { path = "../../digital-twin-model" }
env_logger= { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
samples-common = { path = "../common" }
samples-protobuf-data-access = { path = "../protobuf_data_access" }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-retry = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
uuid = { workspace = true, features = ["v4", "fast-rng", "macro-diagnostics"] }

[build-dependencies]
tonic-build = { workspace = true }

[[bin]]
name = "graph-vehicle-core-provider"
path = "vehicle_core_provider/src/main.rs"

[[bin]]
name = "graph-seat-massager-provider"
path = "seat_massager_provider/src/main.rs"

[[bin]]
name = "graph-consumer"
path = "consumer/src/main.rs"
