# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "samples-mixed"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-std = { workspace = true, features = ["attributes"] }
digital-twin-model = { path = "../../digital-twin-model" }
env_logger= { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
prost = { workspace = true }
samples-common = { path = "../common" }
samples-proto = { path = "../proto" }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true }
uuid = { workspace = true, features = ["v4", "fast-rng", "macro-diagnostics"] }

[build-dependencies]
tonic-build = { workspace = true }

[[bin]]
name = "mixed-provider"
path = "provider/src/main.rs"

[[bin]]
name = "mixed-consumer"
path = "consumer/src/main.rs"