# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "samples-proto"
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = { workspace = true }
