# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "samples-protobuf-data-access"
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
