# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "digital-twin-tutorial"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
digital-twin-model = { path = "../../digital-twin-model" }
env_logger= { workspace = true }
log = { workspace = true }
samples-common = { path = "../common" }
samples-protobuf-data-access = { path = "../protobuf_data_access" }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true }
url = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[[bin]]
name = "digital-twin-provider-tutorial"
path = "provider/src/main.rs"

[[bin]]
name = "digital-twin-consumer-tutorial"
path = "consumer/src/main.rs"