# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "digital_twin_graph"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
common = { path = "../../common" }
core-protobuf-data-access = { path = "../../protobuf_data_access" }
log = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true , features = ["full"] }
tokio-retry = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
yaml-rust = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
