# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "digital_twin_registry"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
common = { path = "../../common" }
core-protobuf-data-access = { path = "../../protobuf_data_access" }
iref = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true , features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true }
tower = { workspace = true }
yaml-rust = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
