# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "managed_subscribe"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bytes = { workspace = true }
common = { path = "../../common" }
core-protobuf-data-access = { path = "../../protobuf_data_access" }
dyn-clone = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_derive = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
yaml-rust = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[features]
containerize = ["common/containerize"]
