# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "command-consumer"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-std = { workspace = true, features = ["attributes"] }
data-exchange = { path = "../../../data-exchange" }
dt-model-identifiers = { path = "../../../dt-model/dt-model-identifiers" }
env_logger= { workspace = true }
iref = { workspace = true }
json-ld  = { git = "https://github.com/blast-hardcheese/json-ld", branch = "resolve-issue-40" }
log = { workspace = true }
prost = { workspace = true }
proto = { path = "../../../proto" }
samples_proto = { path = "../../proto" }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true }
uuid = { workspace = true, features = ["v4", "fast-rng", "macro-diagnostics"] }

[build-dependencies]
tonic-build = { workspace = true }