# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT license.

[package]
name = "property-consumer"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-std = { version = "^1.5", features = ["attributes"] }
dtdl-parser = { path = "../../../dtdl-parser" }
env_logger= "0.10.0"
iref = "^2.0.3"
json-ld  = { git = "https://github.com/blast-hardcheese/json-ld", branch = "resolve-issue-40" }
# json-ld  = { git = "https://github.com/timothee-haudebourg/json-ld", tag = "0.9.1-beta" }

log = "0.4.17"
prost = "0.11"
proto = { path = "../../../proto" }
serde_json = "1.0.88"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.2"

[build-dependencies]
tonic-build = "0.8.2"